changes have been made

--- a/dsan-website/5000-website/codes/clustering.ipynb
+++ b/dsan-website/5000-website/codes/clustering.ipynb
@@ -1294,48 +1294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# References \n",
-    "\n",
-    "1. Clustering\n",
-    "\n",
-    "- https://www.analyticsvidhya.com/blog/2021/01/in-depth-intuition-of-k-means-clustering-algorithm-in-machine-learning/\n",
-    "\n",
-    "- https://www.analyticsvidhya.com/blog/2021/05/k-mean-getting-the-optimal-number-of-clusters/#:~:text=The%20value%20of%20the%20silhouette,near%200%20denote%20overlapping%20clusters.\n",
-    "\n",
-    "- https://jfh.georgetown.domains/dsan5000/slides-and-labs/_site/content/slides/clustering/notes.html\n",
-    "\n",
-    "1. K-Means Clustering \n",
-    "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html\n",
-    "\n",
-    "https://www.analyticsvidhya.com/blog/2021/01/in-depth-intuition-of-k-means-clustering-algorithm-in-machine-learning/\n",
-    "\n",
-    "https://medium.com/analytics-vidhya/how-to-determine-the-optimal-k-for-k-means-708505d204eb#:~:text=The%20Silhouette%20Method,-The%20silhouette%20value&text=The%20range%20of%20the%20Silhouette,many%20or%20too%20few%20clusters.\n",
-    "\n",
-    "- https://matplotlib.org/stable/api/markers_api.html\n",
-    "- https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html\n",
-    "\n",
-    "\n",
-    "2. DBSCAN Clustering \n",
-    "\n",
-    "- https://github.com/sheebamoghal/customer_segmentation/blob/main/E-commerce_analytics.ipynb\n",
-    "- https://www.analyticsvidhya.com/blog/2020/09/how-dbscan-clustering-works/\n",
-    "- https://www.datanovia.com/en/lessons/dbscan-density-based-clustering-essentials/\n",
-    "- https://scikit-learn.org/stable/modules/generated/sklearn.cluster.DBSCAN.html\n",
-    "\n",
-    "\n",
-    "3. Hierarchial Clustering \n",
-    "\n",
-    "- https://docs.scipy.org/doc/scipy/reference/cluster.hierarchy.html\n",
-    "- https://docs.scipy.org/doc/scipy/reference/cluster.hierarchy.html\n",
-    "- https://docs.scipy.org/doc/scipy/reference/generated/scipy.cluster.hierarchy.linkage.html\n",
-    "- https://scikit-learn.org/stable/modules/generated/sklearn.cluster.AgglomerativeClustering.html\n",
-    "\n",
-    "4. Silhouette Scores \n",
-    "\n",
-    "\n",
-    "https://www.educative.io/answers/what-is-silhouette-score\n",
-    "\n"
+    "# Sources"
    ]
   },
   {
