--- a/dsan-website/5000-website/codes/dimensionalityreduction.ipynb
+++ b/dsan-website/5000-website/codes/dimensionalityreduction.ipynb
@@ -1122,40 +1122,41 @@
     "\n",
     "To summarise, the decision between PCA and t-SNE is influenced by the type of the data, the size of the dataset, and the specific goals of the research. Both strategies yield useful insights, and a well-considered mix of both methods can provide a more comprehensive knowledge of complex datasets. Yet, for mine, neither worked.\n",
     "\n",
-    "The instances when one technique may outperform any other is understanding the situations when it is usually used. PCA is generally a linear technique that usually works well when the data is linear but t-SNE on the other hand adheres to capturing the complex and non-linear datasets. Additionally, PCAs are effective at preserving the global structure of the data and t-SNE at preserving the local structure of the dataset. However, when you try to understand it through visualisation, usually for t-SNE, since it is more suitable for lower-dimensional data, is better for the same. PCA is computationally efficient but cannot capture the intricate aspects of the data. One thing that I have witnessed personally whilst work on both PCA and t-SNE is that for t-SNE, it is more affected by the choice of the perplexity values. In conclusion, for my data, PCA performed better although the feature set is higher, attuning to the fact that I had already dropped the highly correlated variables from the dataset, thus contributing to better performance of PCA. \n"
+    "The instances when one technique may outperform any other is understanding the situations when it is usually used. PCA is generally a linear technique that usually works well when the data is linear but t-SNE on the other hand adheres to capturing the complex and non-linear datasets. Additionally, PCAs are effective at preserving the global structure of the data and t-SNE at preserving the local structure of the dataset. However, when you try to understand it through visualisation, usually for t-SNE, since it is more suitable for lower-dimensional data, is better for the same. PCA is computationally efficient but cannot capture the intricate aspects of the data. One thing that I have witnessed personally whilst work on both PCA and t-SNE is that for t-SNE, it is more affected by the choice of the perplexity values. \n",
+    "\n",
+    "Another aspect to be discussed is how PCA and t-SNE both in combination to one another do not really work well, which is why visually the entire data points are scattered. However, I'd like to explore more about this later. But the original PCA does a good job.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sources:\n",
+    "# Sources:\n",
     "\n",
-    "Dimensionality Reduction\n",
+    "1. Dimensionality Reduction:\n",
     "\n",
-    "1. https://www.geeksforgeeks.org/dimensionality-reduction/\n",
+    "- GeeksforGeeks. (n.d.). Dimensionality Reduction. Retrieved from https://www.geeksforgeeks.org/dimensionality-reduction/\n",
+    "PCA:\n",
     "\n",
-    "PCA: \n",
+    "- Hickman, J. (n.d.). DSAN 5000 - Dimensionality Reduction. Retrieved from https://jfh.georgetown.domains/dsan5000/slides-and-labs/_site/content/slides/dimensionality-reduction/notes.html\n",
     "\n",
-    "1. https://jfh.georgetown.domains/dsan5000/slides-and-labs/_site/content/slides/dimensionality-reduction/notes.html\n",
+    "- Roweis, S. (1997). EM algorithms for PCA and SPCA. Technical Report, University of Toronto. Retrieved from https://www.stat.cmu.edu/~larry/=sml/dimension_reduction.pdf\n",
     "\n",
-    "2. https://www.stat.cmu.edu/~larry/=sml/dimension_reduction.pdf\n",
+    "- scikit-learn. (n.d.). sklearn.decomposition.PCA. Retrieved from https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html\n",
     "\n",
-    "3. https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html\n",
+    "- Stack Exchange. (2019). Cumulative sum of PCA explained variance greater than 1. Retrieved from https://stats.stackexchange.com/questions/376981/cumulative-sum-of-pca-explained-variance-greater-than-1\n",
     "\n",
-    "4. https://stats.stackexchange.com/questions/376981/cumulative-sum-of-pca-explained-variance-greater-than-1\n",
+    "- scikit-learn GitHub. (2021). Issue 22974: Cumulative sum of PCA explained variance greater than 1. Retrieved from https://github.com/scikit-learn/scikit-learn/issues/22974\n",
     "\n",
-    "5. https://github.com/scikit-learn/scikit-learn/issues/22974\n",
+    "- VanderPlas, J. (2016). Principal Component Analysis. In Python Data Science Handbook. Retrieved from https://jakevdp.github.io/PythonDataScienceHandbook/05.09-principal-component-analysis.html\n",
     "\n",
-    "6. https://jakevdp.github.io/PythonDataScienceHandbook/05.09-principal-component-analysis.html\n",
+    "- ResearchGate. (2019). A scree plot for explained variance and eigenvalues for the ten Principal Components. Retrieved from https://www.researchgate.net/figure/A-scree-plot-for-explained-variance-and-eigenvalues-for-the-ten-Principal-Components_fig1_338833359\n",
     "\n",
-    "7. https://www.researchgate.net/figure/A-scree-plot-for-explained-variance-and-eigenvalues-for-the-ten-Principal-Components_fig1_338833359\n",
+    "2. t-SNE\n",
     "\n",
-    "TSNE: \n",
+    "- scikit-learn. (n.d.). sklearn.manifold.TSNE. Retrieved from https://scikit-learn.org/stable/modules/generated/sklearn.manifold.TSNE.html\n",
     "\n",
-    "1. https://scikit-learn.org/stable/modules/generated/sklearn.manifold.TSNE.html\n",
-    "\n",
-    "2. https://jfh.georgetown.domains/dsan5000/slides-and-labs/_site/content/slides/dimensionality-reduction/notes.html#t-distributed-stochastic-neighbor-embedding.\n",
+    "- Hickman, J. (n.d.). DSAN 5000 - Dimensionality Reduction. Retrieved from https://jfh.georgetown.domains/dsan5000/slides-and-labs/_site/content/slides/dimensionality-reduction/notes.html#t-distributed-stochastic-neighbor-embedding\n",
     "\n",
     "\n",
     "\n",
