--- a/dsan-website/5000-website/info/introduction.qmd
+++ b/dsan-website/5000-website/info/introduction.qmd
@@ -16,45 +16,16 @@ This got me interested to understand the cross-country comparison of BRICS in te
 
 ## Research Questions
 
-1. How has the GDP growth rate varied among the BRICS countries over the past decade, and what are the key drivers of this growth?
-
-2. What is the inflation rate in each BRICS country, and how have their central banks managed monetary policy to control inflation?
-
-3. How do interest rates differ among BRICS nations, and how do these rates affect investment and economic growth?
-
-4. What are the levels of public debt in the BRICS countries, and how do these debts impact fiscal policies and economic stability?
-
-5. How have exchange rates fluctuated in the BRICS nations, and what is the role of currency exchange in international trade and finance?
-
-6. Are there significant disparities in unemployment rates among the BRICS countries, and what policies have been implemented to address unemployment?
-
-7. What is the balance of trade in each BRICS nation, and how do these trade balances impact foreign exchange reserves and economic stability?
-
-8. How have foreign direct investments (FDI) evolved in the BRICS nations, and what is their role in economic development?
-
-9. What are the major industry sectors contributing to GDP in each BRICS country, and how have these sectors evolved over time?
-
-10. How do the BRICS countries compare in terms of income distribution and poverty reduction efforts?
-    
-11. What are the trends in foreign exchange reserves in BRICS countries, and how do these reserves impact their exchange rate stability and financial security?
-
-12. How do government policies and regulations in each BRICS nation impact foreign direct investment (FDI) inflows and outflows?
-
-13. Can we identify any commonalities or differences in fiscal policy approaches among the BRICS countries, and how have these policies evolved over time?
-
-14. How do energy prices and consumption patterns in the BRICS nations affect their economic performance and energy security?
-
-15. What is the level of economic inequality within each BRICS country, and what strategies have been employed to address income inequality?
-
-16. How have trade agreements and trade diversification efforts impacted the balance of trade in the BRICS countries?
-
-17. What role do international financial institutions (e.g., IMF, World Bank) play in the economic policies and stability of the BRICS nations?
-
-18. Are there regional economic disparities within each BRICS country, and how are governments addressing these disparities?
-
-19. What impact have recent global economic events (e.g., financial crises, pandemics) had on the macroeconomic variables of the BRICS nations?
-
-20. How do each of the BRICS countries manage their foreign debt, and what strategies do they employ to ensure debt sustainability?
+1. What is the general opinion in social media about BRICS nations?
+2. How was the military expenditure played a role in BRICS nations?
+3. Which variables in the dataset are highly correlated to one another?
+4. How is Inflation across the BRICS nations?
+5. What is their trade analysis?
+6. How is India's performance in terms of the Adjusted Net National Income calculated at Constant Prices in comparison to China?
+7. What about the exports and imports growth rate in terms of South Africa and China?
+8. Are Short Term Debt Reserves correlated to other variables in the dataset?
+9. How is GDP growth in comparison to the US and BRICS nations?
+10. What is the modelling capacity for economic data?
 
 ## References
 
